# GuardianWork

./: .env.sample  alembic.ini  pyproject.toml
src/: api_app.py  app.py  bot_app.py  main.py  settings.py
src/alembic/: env.py
src/alembic/versions/: 1f1d7e173060_add_column_manager_id_to_departament.py  3c107bbdbf21_create_init_database_structure.py
src/employee/adapters/: orm.py  repository.py
src/employee/domain/: model.py
src/employee/entrypoints/: api_app.py  tg_app.py
src/employee/service_layer/: services.py  unit_of_work.py
tests/: conftest.py
tests/integration/: test_orm.py
tests/unit/: test_departament.py  test_employee.py
